--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,10 @@
-
 spring.jpa.hibernate.ddl-auto=update
 server.port=9090
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/courses
 spring.datasource.username=trip
 spring.datasource.password=Trip@123
-spring.datasource.driver=com.mysql.jdbc.Driver
+spring.jpa.generate-ddl=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show.sql=true
-#spring.session.store-type=jdbc
-#spring.session.jdbc.initialize-schema=always
-#spring.session.timeout.seconds=900
-#logging.level.org.hibernate.SQL=debug
